fixed expo demo preview not showing on mobile

--- a/apps/portfolio/portfolio.css
+++ b/apps/portfolio/portfolio.css
@@ -146,7 +146,7 @@ section>img {
 }
 
 #expo-demo>div[data-snack-id] {
-    min-width: 600px;
+    min-width: 800px;
 }
 
 #expo-tech-used {
